--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "react": "^18",
+    "react-chat-elements": "^12.0.14",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "unique-username-generator": "^1.3.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
