--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "react": "^18",
-    "react-chat-elements": "^12.0.14",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-spinners": "^0.13.8",
@@ -26,6 +25,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.43.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
